--- a/index.html
+++ b/index.html
@@ -4,51 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>For Alex</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #ffe6f2;
-            text-align: center;
-            padding: 50px;
-        }
-        .container {
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-            max-width: 500px;
-            margin: auto;
-            position: relative; /* Added to position the signature */
-            padding-bottom: 40px; /* Reduced bottom padding */
-        }
-        h1 {
-            color: #d63384;
-        }
-        p {
-            font-size: 18px;
-            color: #333;
-            min-height: 150px;
-        }
-        button {
-            background-color: #d63384;
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            font-size: 16px;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #b52a6a;
-        }
-        .signature {
-            position: absolute;
-            bottom: 10px;
-            right: 20px;
-            font-size: 16px;
-            color: #d63384;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
